Fix overlapping matrices on mobile
Summary:
https://app.asana.com/0/132409062806753/189764246718977

Matrix prefix and suffix had a hardcoded height, though their
contents can be fairly arbitrary (and in many cases are actually
taller than the specified input). Just remove that and let the
bounds flex as desired, so that if things wrap, it doesn't
overlap.

In general, we probably should just look for ways to redo this
content to make it more mobile friendly, but this stops the bleeding

Before:
{F578504}

Test Plan:
 - load [[ http://localhost:9000/?renderer#content=%7B%22question%22%3A%7B%22content%22%3A%22stuff%20before%20the%20matrix%5Cn%5Cn%5B%5B%E2%98%83%20matrix%201%5D%5D%5Cn%5Cnstuff%20after%20the%20matrix%22%2C%22images%22%3A%7B%7D%2C%22widgets%22%3A%7B%22matrix%201%22%3A%7B%22type%22%3A%22matrix%22%2C%22alignment%22%3A%22default%22%2C%22static%22%3Afalse%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22static%22%3Afalse%2C%22matrixBoardSize%22%3A%5B2%2C2%5D%2C%22answers%22%3A%5B%5Bnull%5D%5D%2C%22prefix%22%3A%22%24x%20%2B%20v%20%3D%20%24%22%2C%22suffix%22%3A%22%22%2C%22cursorPosition%22%3A%5B0%2C0%5D%7D%2C%22version%22%3A%7B%22major%22%3A0%2C%22minor%22%3A0%7D%7D%7D%7D%2C%22answerArea%22%3A%7B%22calculator%22%3Afalse%2C%22chi2Table%22%3Afalse%2C%22periodicTable%22%3Afalse%2C%22tTable%22%3Afalse%2C%22zTable%22%3Afalse%7D%2C%22itemDataVersion%22%3A%7B%22major%22%3A0%2C%22minor%22%3A1%7D%2C%22hints%22%3A%5B%5D%7D | content with simple prefix ]]
 {F578505}
 - load [[ http://localhost:9000/?renderer#content=%7B%22question%22%3A%7B%22content%22%3A%22stuff%20before%20the%20matrix%5Cn%5Cn%5B%5B%E2%98%83%20matrix%201%5D%5D%5Cn%5Cnstuff%20after%20the%20matrix%22%2C%22images%22%3A%7B%7D%2C%22widgets%22%3A%7B%22matrix%201%22%3A%7B%22type%22%3A%22matrix%22%2C%22alignment%22%3A%22default%22%2C%22static%22%3Afalse%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22static%22%3Afalse%2C%22matrixBoardSize%22%3A%5B2%2C2%5D%2C%22answers%22%3A%5B%5Bnull%5D%5D%2C%22prefix%22%3A%22%24%5

--- a/stylesheets/exercise-content-package/widgets/matrix.less
+++ b/stylesheets/exercise-content-package/widgets/matrix.less
@@ -1,13 +1,11 @@
 .perseus-matrix {
     @bracketColor: #666;
-    @inputHeight: 30px;
     @margin: 5px;
     @padding: 3px;
 
-    .matrix-prefix, .matrix-suffix {
+    .matrix-prefix,
+    .matrix-suffix {
         display: inline-block;
-        height: @inputHeight;
-        line-height: @inputHeight;
         margin: 2*@margin @margin 0 2*@margin;
         vertical-align: top;
     }
@@ -58,7 +56,6 @@
         border: none;
         border-radius: 0;
         box-sizing: border-box;
-        height: @inputHeight;
         margin: @padding;
         padding: 0;
         text-align: center;
